...
                    .font(.title2)
                    .bold()
                    .padding(.horizontal)

                HStack(spacing: 16) {
                    NavigationLink(destination: FindCommunitiesView()) {
                        CustomExploreButton(title: "Find Communities", icon: "person.3.fill", color: .blue)
                    }
                    NavigationLink(destination: FindEventsView()) {
                        CustomExploreButton(title: "Find Events", icon: "calendar", color: .orange)
                    }
                }
                .padding(.horizontal)

                // Favorites Section
                Text("My Favorites")
...
