...
                    }
                    .padding(.top)
                }

                // Button triggers navigation
                CustomButton(
                    title: "Join Community",
                    backgroundColor: Color.blue,
                    textColor: Color.white
                ) {
                    onJoinAction()
                    print("Join Community button tapped")
                    navigateToForm = true
...
